--- a/anime/index.html
+++ b/anime/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>Samuel Jones ECS Portfolio</title>
+	<title>Samuel Jones Anime</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
