--- a/aboutme.html
+++ b/aboutme.html
@@ -16,6 +16,11 @@
   </div>
   <div class="content">
     PUT THE LIST HERE!
+	  <h2>About me</h2>
+	  <ul>
+	     <li> I have really good 3D spacial awareness
+	     
+	  </ul>
 </div>
   <div class="footer">
     <h4> <a href="aboutme.html">About Me</a> | Contact | Copyright 2021</h4>
