--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,9 @@
 	  <h2>About me</h2>
 	  <ul>
 	     <li> I have really good 3D spacial awareness
-	     
+	     <li> I like to code
+	     <li> I like watching anime
+	     <li> 
 	  </ul>
 </div>
   <div class="footer">
