--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,8 @@
 	     <li> I have really good 3D spacial awareness
 	     <li> I like to code
 	     <li> I like watching anime
-	     <li> 
+	     <li> I am on my school's Esports team
+	     <li> I would like to build computer's or code
 	  </ul>
 </div>
   <div class="footer">
