--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,7 +14,10 @@
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../anime/index.html">Anime</a> | 3</h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+	  <h3> </h3>  
+	  <img src="../images/typing.jpg" alt="typing" width="1902" height="912">	
+  </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | Contact | Copyright 2021</h4>
   </div>
