--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,7 +15,7 @@
     <h3><a href="index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../anime/index.html">Anime</a> | 3</h3>
   </div>
   <div class="content">
-	  <h3>Typing test results </h3>  
+	  <h3>Typing test results: October 13</h3>  
 	  <img src="../images/typing.jpg" alt="typing" width="1062" height="334">	
   </div>
   <div class="footer">
